solo cambie rockstar services

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Mi Proyecto Rockstar</h1>
+    <h1>Rockstar services</h1>
     <img src="img/rockstarLogo.png" alt="Logo de Rockstar" class="logo-principal">
 </body>
 </html>	
