Primera parte. Header, navigation bar y cards.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Mi Primera Web</title>
+    <meta charset="UTF-8">
+    <title>Rockstar</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rockstar services</h1>
-    <img src="img/rockstarLogo.png" alt="Logo de Rockstar" class="logo-principal">
+<header class="header">
+    <div class="logo">ROCKSTAR</div>
+    <nav class="menu">
+        <a href="#">Proyectos</a>
+        <a href="#">Contacto</a>
+    </nav>
+</header>
+
+<main class="hero">
+    <h1>Creando mundos virtuales extraordinarios</h1>
+    <p>
+        Somos una empresa líder en desarrollo de videojuegos que combina
+        narrativa inmersiva, tecnología de vanguardia y diseño innovador
+        para crear experiencias inolvidables.
+    </p>
+</main>
+
+<section class="info">
+    <div class="card">
+        <h2>Misión</h2>
+        <p>
+            Revolucionar la industria del entretenimiento digital creando
+            videojuegos que desafíen los límites de la creatividad y la
+            tecnología, ofreciendo experiencias únicas que conecten
+            emocionalmente con millones de jugadores alrededor del mundo.
+        </p>
+    </div>
+
+    <div class="card">
+        <h2>Visión</h2>
+        <p>
+            Ser la compañía de videojuegos más influyente y respetada a nivel
+            global, reconocida por nuestra innovación constante, calidad
+            excepcional y compromiso con la comunidad de jugadores.
+        </p>
+    </div>
+</section>
+
+
+
+
 </body>
-</html>	
+</html>
+
