Pagina casi finalizada, agregue imagenes y corregí errores pequeños CL4

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="projects-grid">
                 <article class="project-card">
                     <div class="project-image">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='500'%3E%3Crect fill='%23F2C12E' width='800' height='500'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='48' fill='%23262626'%3ENeon Velocity%3C/text%3E%3C/svg%3E" alt="Neon Velocity - Juego de carreras futurista con gráficos de neón y alta velocidad">
+                        <img src="img/neon-velocity.jpg" alt="Neon Velocity - Juego de carreras futurista con gráficos de neón y alta velocidad">
                     </div>
                     <div class="project-content">
                         <h3>Neon Velocity</h3>
@@ -61,7 +61,7 @@
 
                 <article class="project-card">
                     <div class="project-image">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='500'%3E%3Crect fill='%23262626' width='800' height='500'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='48' fill='%23F2E530'%3EShadow Realm%3C/text%3E%3C/svg%3E" alt="Shadow Realm - RPG de fantasía oscura con mundo abierto y narrativa profunda">
+                        <img src="img/shadow-realm.jpg" alt="Shadow Realm - RPG de fantasía oscura con mundo abierto y narrativa profunda">
                     </div>
                     <div class="project-content">
                         <h3>Shadow Realm</h3>
@@ -72,7 +72,7 @@
 
                 <article class="project-card">
                     <div class="project-image">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='500'%3E%3Crect fill='%23C4A000' width='800' height='500'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='48' fill='white'%3ECosmic Odyssey%3C/text%3E%3C/svg%3E" alt="Cosmic Odyssey - Aventura espacial de exploración y construcción en galaxias infinitas">
+                        <img src="img/cosmic-odyssey.jpg" alt="Cosmic Odyssey - Aventura espacial de exploración y construcción en galaxias infinitas">
                     </div>
                     <div class="project-content">
                         <h3>Cosmic Odyssey</h3>
