Agregué imagen al header y una opacidad. Falta corregir opacidad de hero en tarjetas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+https://belakenobi.github.io/Actividad-1/<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rockstar - Creamos experiencias de juego inolvidables que transforman la industria del entretenimiento digital">
@@ -21,7 +21,10 @@
                 </div>
             </div>
         </nav>
-        
+    </header>			
+
+
+    <section class="intro">     <!-- SECCION CON FONDO (imagen + overlay) -->		
         <div class="hero">
             <div class="container">
                 <h2 class="hero-title">Creando mundos virtuales extraordinarios</h2>
@@ -40,8 +43,12 @@
                 </div>
             </div>
         </div>
-    </header>
 
+    </section>
+
+
+
+		
     <!-- Proyectos Section -->
     <section id="proyectos" class="projects">
         <div class="container">
