--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-https://belakenobi.github.io/Actividad-1/<head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rockstar - Creamos experiencias de juego inolvidables que transforman la industria del entretenimiento digital">
