--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="description" content="Rockstar - Creamos experiencias de juego inolvidables que transforman la industria del entretenimiento digital">
     <title>Rockstar - Videojuegos de Nueva Generación</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Header -->
